--- a/Kernel/Cargo.toml
+++ b/Kernel/Cargo.toml
@@ -3,4 +3,8 @@ name = "Kernel"
 version = "0.1.0"
 authors = ["KeyboardMayCry <eddy199883@gmail.com>"]
 
+[lib]
+crate-type = ["staticlib"]
+path = "src/main.rs"
+
 [dependencies]
