modified:   Kernel/Cargo.toml 	new file:   Kernel/src/Core/main.rs 	deleted:    Kernel/src/Core/mod.rs 	new file:   Kernel/src/Platform/x86_64/Features.rs 	new file:   Kernel/src/Platform/x86_64/GDT.rs 	new file:   Kernel/src/Platform/x86_64/Interrupt/IDT.rs 	new file:   Kernel/src/Platform/x86_64/Interrupt/IRQ.rs 	new file:   Kernel/src/Platform/x86_64/Interrupt/mod.rs 	new file:   Kernel/src/Platform/x86_64/Paging.rs 	new file:   Kernel/src/Platform/x86_64/Ports.rs 	modified:   Kernel/src/Platform/x86_64/mod.rs 	deleted:    Kernel/src/build.rs 	modified:   Makefile 	new file:   Modules/Drivers/Serial/Cargo.toml 	new file:   Modules/Drivers/Serial/src/lib.rs 	renamed:    x86_64-silly_os-gnu.json -> x86_64-silly_os.json 	deleted:    x86_64-sillyos.json

--- a/Modules/Drivers/Serial/Cargo.toml
+++ b/Modules/Drivers/Serial/Cargo.toml
@@ -1,10 +1,6 @@
 [package]
-name = "Kernel"
+name = "Serial"
 version = "0.1.0"
 authors = ["KeyboardMayCry <eddy199883@gmail.com>"]
-
-[lib]
-crate-type = ["staticlib"]
-path = "src/Core/main.rs"
 
 [dependencies]
