new file:   Kernel/Cargo.lock 	modified:   Kernel/Cargo.toml 	modified:   Kernel/src/lib.rs 	new file:   Kernel/target/debug/.cargo-lock 	new file:   Kernel/target/x86_64-sillyos/debug/.cargo-lock 	new file:   Kernel/target/x86_64-sillyos/debug/.fingerprint/Kernel-d4cc75a30a65b836/dep-lib-Kernel-d4cc75a30a65b836 	new file:   Kernel/target/x86_64-sillyos/debug/.fingerprint/Kernel-d4cc75a30a65b836/lib-Kernel-d4cc75a30a65b836 	new file:   Kernel/target/x86_64-sillyos/debug/.fingerprint/Kernel-d4cc75a30a65b836/lib-Kernel-d4cc75a30a65b836.json 	new file:   Kernel/target/x86_64-sillyos/debug/deps/libKernel-d4cc75a30a65b836.a 	new file:   Kernel/target/x86_64-sillyos/debug/libKernel.a 	new file:   Kernel/target/x86_64-sillyos/debug/libKernel.d 	renamed:    x86_64-sillyos.json -> Kernel/x86_64-sillyos.json 	modified:   Makefile 	new file:   Makefile_config/config.mk

--- a/Kernel/Cargo.toml
+++ b/Kernel/Cargo.toml
@@ -3,4 +3,7 @@ name = "Kernel"
 version = "0.1.0"
 authors = ["KeyboardMayCry <eddy199883@gmail.com>"]
 
+[lib]
+crate-type = ["staticlib"]
+
 [dependencies]
