modified:   Kernel/Cargo.lock 	modified:   Kernel/Cargo.toml 	modified:   Kernel/Platform/x86_64/Cargo.toml 	modified:   Kernel/Platform/x86_64/src/lib.rs 	modified:   Kernel/src/lib.rs 	modified:   Makefile 	renamed:    Makefile_config/config.mk -> Makefiles/Config.mk 	new file:   Makefiles/Kernel/Core.mk 	new file:   Makefiles/Kernel/Platform/x86_64.mk 	deleted:    edk2.sh 	deleted:    edk2_fix.patch

--- a/Kernel/Cargo.toml
+++ b/Kernel/Cargo.toml
@@ -10,6 +10,6 @@ crate-type = ["staticlib"]
 
 # Target specificed crate
 [target.x86_64-sillyos.dependencies]
-x86 = "0.8.1"
+x86_64 = { path = "Platform/x86_64"}
 
 
