--- a/Kernel/Platform/x86_64/Cargo.toml
+++ b/Kernel/Platform/x86_64/Cargo.toml
@@ -3,4 +3,5 @@ name = "x86_64"
 version = "0.1.0"
 authors = ["KeyboardMayCry <eddy199883@gmail.com>"]
 
-[dependencies]
+[target.x86_64-sillyos.dependencies]
+x86 = "0.8.1"
