--- a/Kernel/Cargo.toml
+++ b/Kernel/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["staticlib"]
 
 [dependencies]
 
-# Target specificed crate
+# Target specified crate
 [target.x86_64-sillyos.dependencies]
 x86_64 = { path = "Platform/x86_64"}
 
