Long road exploring, and finally get into kernel.

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -2,35 +2,28 @@ include ../Config.mk
 
 LINKER_SCRIPT := $(PLAT)-core.ld
 
-LIB_KERNAL_A := ./target/$(TARGET)/debug/libKernel.a
-ifeq ($(DEBUG), 0)
-LIB_KERNAL_A := ./target/$(TARGET)/release/libKernel.a
-endif
+ASM_SRC := $(wildcard src/asm/*.asm)
+ASM_OBJ := $(patsubst %.asm, %.o, $(ASM_SRC))
 
-PLATFORM_DIR := ./Platform/$(PLAT)
-PLATFORM_SRC := $(wildcard $(PLATFORM_DIR)/**/*.asm)
-PLATFORM_OBJ := $(patsubst %.asm, $(BUILD_DIR)/%.o, $(PLATFORM_SRC))
+CORE_A := target/$(TARGET)/release/libKernel.a
 
 LD_FLAG := -nostdlib --gc-sections
 
-all: build_dir $(BUILD_DIR)/$(CORE_FILE)
+all: $(BUILD_DIR)/$(CORE_FILE)
 
-build_dir: .force
-	@mkdir -p $(BUILD_DIR)
+$(BUILD_DIR)/$(CORE_FILE): .force make_core $(ASM_OBJ)
+	$(LD)  -T $(LINKER_SCRIPT) $(LD_FLAG) $(ASM_OBJ) $(CORE_A) -o $@
 
-$(BUILD_DIR)/$(CORE_FILE): .force $(LIB_KERNAL_A) $(PLATFORM_OBJ)
-	@$(LD) -T $(LINKER_SCRIPT) $(LD_FLAG) $(PLATFORM_OBJ) $(LIB_KERNAL_A) -o $@
+make_core: .force
+	RUST_TARGET_PATH=$(shell pwd) xargo build --target $(TARGET) --release
 
-$()
 
 # Assembly code
-$(PLATFORM_OBJ): $(PLATFORM_SRC)
-ifeq ($(PLAT), x86_64)
-	@$(NASM) -f elf64 $< -o $@
-endif
+%.o: %.asm
+	$(NASM) -f elf64 $< -o $@
 
 clean:
-	xargo clean
-	@rm -fvr $(BUILD_DIR)
+	@xargo clean
+	@rm -fvr $(PLATFORM_OBJ)
 
 .force:
