--- a/Kernel/Cargo.toml
+++ b/Kernel/Cargo.toml
@@ -6,4 +6,5 @@ authors = ["KeyboardMayCry <eddy199883@gmail.com>"]
 [lib]
 crate-type = ["staticlib"]
 
-[target.x86_64-sillyos.dependencies]
+[dependencies]
+rlibc = "1.0.0"
