--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -7,7 +7,7 @@ ASM_OBJ := $(patsubst %.asm, %.o, $(ASM_SRC))
 
 CORE_A := target/$(TARGET)/release/libKernel.a
 
-LD_FLAG := -nostdlib --gc-sections
+LD_FLAG := --gc-sections
 
 all: $(BUILD_DIR)/$(CORE_FILE)
 
@@ -15,7 +15,8 @@ $(BUILD_DIR)/$(CORE_FILE): .force make_core $(ASM_OBJ)
 	$(LD)  -T $(LINKER_SCRIPT) $(LD_FLAG) $(ASM_OBJ) $(CORE_A) -o $@
 
 make_core: .force
-	RUST_TARGET_PATH=$(shell pwd) xargo build --target $(TARGET) --release
+
+	RUST_TARGET_PATH=$(shell pwd) xargo build --target $(TARGET)
 
 
 # Assembly code
