Working on Silly Library Added string n memory related function to Library Silly.

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -18,9 +18,9 @@ CORE_SRC += $(wildcard Core/**/*.cxx)
 CORE_OBJ := $(patsubst %.cxx, %.o, $(CORE_SRC))
 
 C_FLAG := -std=c++14  -ffreestanding  -mno-red-zone -nostdlib -fno-builtin -nostdinc
-LD_FLAG :=  -nostdlib -z max-page-size=0x1000
+C_FLAG += -I $(PROJECT_ROOT)/Library/Silly/Include
 
-C_LIB := 
+C_LIB := -L $(BUILD_DIR) -lsilly
 ifeq ($(TOOL), LLVM)
 # LLVM
 C_FLAG += -target x86_64-pc-none-elf
@@ -28,7 +28,7 @@ C_FLAG += -I $(PROJECT_ROOT)/cross-llvm/build/llvm/lib/clang/**/include
 else
 # GCC
 C_FLAG += -I $(PROJECT_ROOT)/CC/lib/gcc/x86_64-elf/**/include
-C_LIB := -lgcc
+C_LIB += -lgcc
 endif
 C_FLAG += -fno-rtti -fno-exceptions
 C_FLAG += -O2 
@@ -37,11 +37,13 @@ C_FLAG +=  -Wall -Wextra
 C_FLAG += -I $(PROJECT_ROOT)/Library/Silly/Include 
 C_FLAG += -I $(PROJECT_ROOT)/Kernel/Platform/$(PLAT)/Include
 
+LD_FLAG :=  -nostdlib -z max-page-size=0x1000
+
 all: $(BUILD_DIR)/$(CORE_FILE)
 
 $(BUILD_DIR)/$(CORE_FILE): $(PLAT_OBJ) 
 	@echo "[\033[0;32mLinker\033[0m] <= \033[0;33mCore objects + Platform objects\033[0m"
-	@$(LD)  -T $(LINKER_SCRIPT) $(LD_FLAG) -o $@ $(PLAT_OBJ) $(C_LIB)
+	@$(LD) -T $(LINKER_SCRIPT) $(LD_FLAG) -o $@ $^ $(C_LIB)
 
 clean:
 	@rm -fvr $(PLAT_OBJ)
