Threw GCC alway!

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -17,29 +17,27 @@ CORE_SRC += $(wildcard Core/**/*.cxx)
 
 CORE_OBJ := $(patsubst %.cxx, %.o, $(CORE_SRC))
 
-C_FLAG := -std=c++14  -ffreestanding  -mno-red-zone -nostdlib -fno-builtin -nostdinc
+C_FLAG := -std=c++11  -ffreestanding  -mno-red-zone -nostdlib -fno-builtin 
+#Do not use C stdlib use C++ one
+C_FLAG += -nostdinc
 C_FLAG += -I $(PROJECT_ROOT)/Library/Silly/Include
+C_FLAG += -target $(PLAT)-none-elf
 
-C_LIB := -L $(BUILD_DIR) -lsilly
-
-# GCC
-C_FLAG += -I $(PROJECT_ROOT)/CC/lib/gcc/x86_64-elf/**/include
-C_LIB += -lgcc
+C_LIB := -L $(BUILD_DIR)
 
 C_FLAG += -fno-rtti -fno-exceptions
 C_FLAG += -O2 
 C_FLAG +=  -Wall -Wextra
 # Include
-C_FLAG += -I $(PROJECT_ROOT)/Library/Silly/Include 
+C_FLAG += -I $(PROJECT_ROOT)/Library/libsilly/Standalone
 C_FLAG += -I $(PROJECT_ROOT)/Kernel/Platform/$(PLAT)/Include
 
-LD_FLAG :=  -nostdlib -z max-page-size=0x1000
+LD_FLAG := -T $(LINKER_SCRIPT) -nostdlib -z max-page-size=0x1000 
 
 all: $(BUILD_DIR)/$(CORE_FILE)
 
 $(BUILD_DIR)/$(CORE_FILE): $(PLAT_OBJ) 
-	@echo "[\033[0;32mLinker\033[0m] <= \033[0;33mCore objects + Platform objects\033[0m"
-	@$(LD) -T $(LINKER_SCRIPT) $(LD_FLAG) -o $@ $^ $(C_LIB)
+	$(LD) $(LD_FLAG) -o $@ $^ $(C_LIB)
 
 clean:
 	@rm -fvr $(PLAT_OBJ)
