--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "python.pythonPath": "/usr/bin/python3",
     "git.ignoreLimitWarning": true,
+    "clang.executable": "clang",
+    "clang.cxxflags": ["-std=c++14", "-I ${workspaceRoot}/Library/Silly/Include", "-I ${workspaceRoot}/Kernel/Platform/x86_64/Include"]
     
 }
